--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -1,3 +1,2 @@
-github: lukesmithxyz
-custom: ["https://lukesmith.xyz/donate", "https://paypal.me/lukemsmith", "https://lukesmith.xyz/crypto"]
-patreon: lukesmith
+custom: ["https://sarbs.sergius.xyz/donate.html"]
+github: Sergiu-us
